@@ -1,22 +1,20 @@
 package com.emailage.javawrapper.utilities;
 
+import org.apache.commons.codec.binary.Base64;
+
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.security.Key;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.Map;
-import java.util.Random;
+import java.util.*;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 
 
 public class OAuth {
     private static final Random _Random = new Random();
     private static final String _UnreservedChars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789-_.~";
-    public final static String HMACSHA1 = "HMAC-SHA1";
+    private final static String HMACSHA1 = "HMAC-SHA1";
     private final static String HMACSHA256 = "HMAC-SHA256";
     private final static String HMACSHA384 = "HMAC-SHA384";
     private final static String HMACSHA512 = "HMAC-SHA512";
@@ -78,7 +76,7 @@ public class OAuth {
         StringBuilder sb = new StringBuilder();
         
 		for (String key : query.keySet()) {
-			sb.append(((String) key).concat(query.get(key) == null ? "" : "="
+			sb.append(key.concat(query.get(key) == null ? "" : "="
 		           + query.get(key))).append("&");
 		}
 
@@ -163,6 +161,6 @@ public class OAuth {
 	 * for generating the base64
 	 */
 	public static String toBase64(byte[] bs) {
-		return DatatypeConverter.printBase64Binary(bs);
+        return Base64.encodeBase64String(bs);
 	}
 }
